--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "yt-dlp-desktop"
-version = "0.1.0"
+name = "omni_downloader"
+version = "1.0.0"
 description = "A Tauri App for downloading videos"
-authors = ["you"]
+authors = ["Ahmad Abdelbary"]
 edition = "2021"
 
 [lib]
-name = "yt_dlp_desktop_lib"
+name = "omni_downloader_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
